refactor(diet): Convert all DTOs in diet domain to record
팀원의 코드 리뷰 피드백을 반영하여, `diet` 도메인의 모든 DTO(`Food...`, `Meal...`)를 `class`에서 `record`로 리팩토링했습니다.

**주요 변경 사항:**
- **DTO 변경**: `Food` 및 `Meal` 관련 DTO를 `record`로 전환하여 코드의 간결성과 데이터의 불변성을 확보했습니다.
- **관련 코드 수정**: DTO 변경에 따라, 이를 사용하는 모든 서비스, 엔티티, 테스트 코드의 필드 접근 방식을 `getXxx()`에서 `xxx()`로 수정했습니다.

이번 리팩토링을 통해 `user` 도메인과 DTO 컨벤션을 통일하여 프로젝트 전체의 코드 일관성을 향상시켰습니다.